--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="robots" content="index,follow" />
 	
 
-	<link rel="icon" href="/icons/plant.svg" /> 
+	<link rel="icon" href="plant.svg" /> 
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
 	rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
@@ -44,15 +44,15 @@
 	
 	<section class="planticons">
 		
-			<img   src="/icons/plant1.svg" alt="plant icon1" />
+			<img   src="plant1.svg" alt="plant icon1" />
 			<h2>Love Plants</h2>
 		
 		
-			<img  src="/icons/plant2.svg" alt="plant icon2" />
+			<img  src="plant2.svg" alt="plant icon2" />
 			<h2>Grow Plants</h2>
 		
 		
-			<img  src="/icons/plant3.svg" alt="plat icon3" />
+			<img  src="plant3.svg" alt="plat icon3" />
 			<h2>Save the World</h2>
 		
 	</section>
@@ -122,9 +122,9 @@
 		</header>
 		<div class="footerimages">
 			<ul id="footericons">
-				<li><a href="#"> <img src="/instagram.png" alt="instagram">  </a>   </li>
-				<li> <a href="#"> <img src="/facebook.png" alt="facebook">  </a>   </li>
-				<li> <a href="#"> <img src="/twitter.png" alt="twitter">  </a>    </li>
+				<li><a href="#"> <img src="instagram.png" alt="instagram">  </a>   </li>
+				<li> <a href="#"> <img src="facebook.png" alt="facebook">  </a>   </li>
+				<li> <a href="#"> <img src="twitter.png" alt="twitter">  </a>    </li>
 
 			</ul>
 
