--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="links">
             <img src="logo.png" alt="image logo" id="logo">
             <ul class="navigation">
-                <li><a href="index.html">Home</a>   </li>
+                <li><a href="about.html">About</a>   </li>
                 <li><a href="#">Contact</a>   </li>
                 <li><a href="#">Shop</a>  </li>
                 
