new updates again

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
     </div>
     
     <header >
-        <nav class="links">
+		<div class="aboutlogo">
             <img src="logo.png" alt="image logo" id="logo">
+        </div>
+        <nav class="links">
+            
             <ul class="navigation">
                 <li><a href="about.html">About</a>   </li>
                 <li><a href="#">Contact</a>   </li>
