--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
 	<section class="planticons">
 		
 			<img   src="plant1.svg" alt="plant icon1" />
-			<h2>Love Plants</h2>
+			<h2>Give Plants</h2>
 		
 		
 			<img  src="plant2.svg" alt="plant icon2" />
-			<h2>Grow Plants</h2>
+			<h2>Love Plants</h2>
 		
 		
 			<img  src="plant3.svg" alt="plat icon3" />
-			<h2>Save the World</h2>
+			<h2>Grow Plants</h2>
 		
 	</section>
 		
@@ -94,7 +94,7 @@
 			</div>
 			<div class="card">
 				<img src="about2.jpg" alt="picture of owner of plant" />
-				<p>We provide you with plants that are locally grown so you could <br> grow them at your own home.  </p>
+				<p>We provide you with plants that are locally grown  <br> and sustainably sourced.  </p>
 			</div>
 			
 
